[package]
name = "jlink_rtt"
version = "0.2.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
description = "Implements the JLINK RTT protocol"
keywords = ["no-std", "arm", "cortex-m", "jlink", "rtt"]
license = "BSD-3-Clause"
repository = "https://github.com/wez/jlink_rtt"
readme = "../README.md"

[dependencies]

[features]
# Use this when using RTT in RAM targets (init and data section both in RAM).
# This prevents the host to falsly identify the RTT Callback Structure
# in the init segment as the used Callback Structure.
rtt_in_ram = []
